--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "private": true,
   "homepage": "https://ajhenry.github.io/remotify",
   "dependencies": {
-    "firebase": "^5.0.4",
+    "ajv": "^6.5.3",
+    "dotenv": "^6.0.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "firebase": "^5.5.1",
     "gh-pages": "^1.1.0",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "husky": "^0.14.3",
+    "prettier": "^1.14.2",
+    "pretty-quick": "^1.6.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-google-button": "^0.5.3",
+    "react-redux-firebase": "^2.1.8",
     "react-scripts": "1.1.4",
     "react-web-notification": "^0.3.2",
-    "reactstrap": "^6.0.1"
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -19,6 +26,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "pretty-quick --staged"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1"
   }
 }
